@@ -38,4 +38,10 @@ username to use when connecting (default "root") ENDOPTION
 OPTION "--server.password <string>"
 password to use when connecting. Leave empty for a password prompt ENDOPTION
 EXAMPLES
+EXAMPLE COMMAND --file heroes.json --type json --collection superheroes --create-collection true
+imports JSON data from file heroes.json into collection superhoeres. creates the collection if it does not exist
+EXAMPLE COMMAND --file export.csv --type csv --collection mydata
+imports CSV data from export.csv into existing collection mydata.
+EXAMPLE COMMAND --file values.json --collection mydata --server.endpoint tcp://127.0.0.1:8529 --server.database mydb
+imports JSON data from file values.json into collection mydata, using a different server endpoint and database
 AUTHOR
